letter spacing bugfix; added twitter and youtube handle

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,7 +48,7 @@ body {
 }
 
 .section p {
-  line-height: 200%;
+  line-height: 160%;
   letter-spacing:+0.05em;
   //letter-spacing: 0em;
 }
